--- a/Estoque/appsettings.json
+++ b/Estoque/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-LBQF810B;Database=Estoque"
+    "DefaultConnection": "Server=LAPTOP-LBQF810B;Database=Estoque;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
