Model, context, controller - api

--- a/WebApiEstoque/appsettings.json
+++ b/WebApiEstoque/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-LBQF810B;Database=Estoque;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
